--- a/client-poc/package.json
+++ b/client-poc/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc --build",
+    "prod": "tsc --build",
     "clean": "rm -rf dist/ && rm -rf *.tsbuildinfo"
   },
   "devDependencies": {
