--- a/client-poc/package.json
+++ b/client-poc/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/index.js",
-    "prod": "tsc --build",
+    "start": "node dist/bin/app.js",
+    "prod": "tsc --build && echo \"Creating packed binary...\" && webpack --config webpack.config.js && echo \"JS Binary created: dist/app.js\"",
     "clean": "rm -rf dist/ && rm -rf *.tsbuildinfo"
   },
   "devDependencies": {
     "@types/node": "^18.7.23",
     "greenlight-xcloud": "^0.1.0",
-    "typescript": "^4.8.4"
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
