--- a/client-poc/package.json
+++ b/client-poc/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/bin/app.js",
+    "start": "DEBUG=* node dist/bin/app.js",
     "prod": "tsc --build && echo \"Creating packed binary...\" && webpack --config webpack.config.js && echo \"JS Binary created: dist/app.js\"",
     "clean": "rm -rf dist/ && rm -rf *.tsbuildinfo"
   },
