--- a/client-poc/package.json
+++ b/client-poc/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "DEBUG=* node dist/bin/app.js",
+    "dev": "DEBUG=* node dist/index.js",
     "prod": "tsc --build && echo \"Creating packed binary...\" && webpack --config webpack.config.js && echo \"JS Binary created: dist/app.js\"",
     "clean": "rm -rf dist/ && rm -rf *.tsbuildinfo"
   },
